examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: demo-apps
spec:
  ingressClassName: public-apps
  rules:
    - host: website.example.com
      http:
        paths:
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: website-admin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
    - host: files.example.com
      http:
        paths:
          - path: /download
            pathType: Exact
            backend:
              service:
                name: files
                port:
                  name: http
